# backend/src/main/kotlin/com/manage/crm/email/application/dto/ScheduleTaskServiceDto.kt
@@ -9,6 +9,7 @@ data class ScheduleTaskView(
     val taskName: String,
     val templateId: Long,
     val userIds: List<Long>,
+    val segmentId: Long?,
     val expiredTime: LocalDateTime
 )
 
@@ -17,6 +18,7 @@ data class NotificationEmailSendTimeOutEventInput(
     val templateId: Long,
     val templateVersion: Float?,
     val userIds: List<Long>,
+    val segmentId: Long? = null,
     val eventId: EventId,
     val expiredTime: LocalDateTime
 ) : ScheduleInfo()
